[workspace]
members = ["crates/*"]
resolver = "2"
package.version = "1.0.0"

[workspace.lints]
clippy.unwrap_used = "deny"
clippy.get_first = "allow"

[profile.release]
lto = true
panic = "abort"

[workspace.dependencies]
step-ingestooor-sdk = { package = "step-ingestooor-sdk", git = "ssh://git@github.com/step-finance/step-common-rust.git", rev = "808909a3bc8b3714fe56b562914dbfe6ad5926df" }
solana-transaction-status = "=2.1.16"
solana-program = "=2.1.16"
solana-sdk = "=2.1.16"
solana-client = "=2.1.16"

lapin = "2.0.3"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["env", "derive"] }
dotenvy = "0.15.7"
clickhouse = { version = "0.13.1", features = ["native-tls"] }
futures = "0.3.31"
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
petgraph = "0.7.1"
rust_decimal = { version = "1.37.1", features = ["maths"] }
chrono = "0.4.39"
bs58 = "0.5.1"
axum = "0.8.1"
itertools = "0.14.0"
primitive-types = "0.13.1"
reqwest = "0.12.22"

[patch.crates-io]
solana-cost-model = { git = 'https://github.com/step-finance/agave', rev = "9bd691f78d3e1a9c281a52e5358a5850b7372cca" }
solana-merkle-tree = { git = 'https://github.com/step-finance/agave', rev = "9bd691f78d3e1a9c281a52e5358a5850b7372cca" }
solana-ledger = { git = 'https://github.com/step-finance/agave', rev = "9bd691f78d3e1a9c281a52e5358a5850b7372cca" }
solana-storage-bigtable = { git = 'https://github.com/step-finance/agave', rev = "9bd691f78d3e1a9c281a52e5358a5850b7372cca" }
solana-storage-proto = { git = 'https://github.com/step-finance/agave', rev = "9bd691f78d3e1a9c281a52e5358a5850b7372cca" }
solana-runtime = { git = 'https://github.com/step-finance/agave', rev = "9bd691f78d3e1a9c281a52e5358a5850b7372cca" }
solana-accounts-db = { git = 'https://github.com/step-finance/agave', rev = "9bd691f78d3e1a9c281a52e5358a5850b7372cca" }
solana-client = { git = 'https://github.com/step-finance/agave', rev = "9bd691f78d3e1a9c281a52e5358a5850b7372cca" }
solana-transaction-status = { git = 'https://github.com/step-finance/agave', rev = "9bd691f78d3e1a9c281a52e5358a5850b7372cca" }
solana-sdk = { git = 'https://github.com/step-finance/agave', rev = "9bd691f78d3e1a9c281a52e5358a5850b7372cca" }
solana-logger = { git = 'https://github.com/step-finance/agave', rev = "9bd691f78d3e1a9c281a52e5358a5850b7372cca" }
solana-program = { git = 'https://github.com/step-finance/agave', rev = "9bd691f78d3e1a9c281a52e5358a5850b7372cca" }
solana-metrics = { git = 'https://github.com/step-finance/agave', rev = "9bd691f78d3e1a9c281a52e5358a5850b7372cca" }
solana-account-decoder = { git = 'https://github.com/step-finance/agave', rev = "9bd691f78d3e1a9c281a52e5358a5850b7372cca" }
solana-derivation-path = { git = 'https://github.com/step-finance/agave', rev = "9bd691f78d3e1a9c281a52e5358a5850b7372cca" }
