[workspace]
members = ["crates/*"]
resolver = "2"
package.version = "1.0.0"

[workspace.lints]
clippy.unwrap_used = "deny"
clippy.get_first = "allow"

[profile.release]
lto = true
panic = "abort"

[workspace.dependencies]
step-ingestooor-sdk = { package = "step-ingestooor-sdk", git = "ssh://git@github.com/step-finance/step-common-rust.git", rev = "3ff1b46b2face4bc02e0679b196b22d236540bd6" }
solana-transaction-status = "=2.2.14"
solana-client = "=2.2.14"
solana-sdk = "=2.2.2"

lapin = "2.0.3"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["env", "derive"] }
dotenvy = "0.15.7"
clickhouse = { version = "0.13.1", features = ["native-tls"] }
futures = "0.3.31"
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
petgraph = "0.7.1"
rust_decimal = { version = "1.37.1", features = ["maths"] }
chrono = "0.4.39"
bs58 = "0.5.1"
axum = "0.8.1"
itertools = "0.14.0"
primitive-types = "0.13.1"
reqwest = "0.12.22"

[patch.crates-io]
solana-cost-model = { git = 'https://github.com/step-finance/agave', rev = "88f72f80826f4c9cf10464a76063b82804dfe6c2" }
solana-merkle-tree = { git = 'https://github.com/step-finance/agave', rev = "88f72f80826f4c9cf10464a76063b82804dfe6c2" }
solana-ledger = { git = 'https://github.com/step-finance/agave', rev = "88f72f80826f4c9cf10464a76063b82804dfe6c2" }
solana-storage-bigtable = { git = 'https://github.com/step-finance/agave', rev = "88f72f80826f4c9cf10464a76063b82804dfe6c2" }
solana-storage-proto = { git = 'https://github.com/step-finance/agave', rev = "88f72f80826f4c9cf10464a76063b82804dfe6c2" }
solana-runtime = { git = 'https://github.com/step-finance/agave', rev = "88f72f80826f4c9cf10464a76063b82804dfe6c2" }
solana-accounts-db = { git = 'https://github.com/step-finance/agave', rev = "88f72f80826f4c9cf10464a76063b82804dfe6c2" }
solana-client = { git = 'https://github.com/step-finance/agave', rev = "88f72f80826f4c9cf10464a76063b82804dfe6c2" }
solana-transaction-status = { git = 'https://github.com/step-finance/agave', rev = "88f72f80826f4c9cf10464a76063b82804dfe6c2" }
solana-metrics = { git = 'https://github.com/step-finance/agave', rev = "88f72f80826f4c9cf10464a76063b82804dfe6c2" }
solana-account-decoder = { git = 'https://github.com/step-finance/agave', rev = "88f72f80826f4c9cf10464a76063b82804dfe6c2" }
agave-geyser-plugin-interface = { git = "https://github.com/step-finance/agave", rev = "88f72f80826f4c9cf10464a76063b82804dfe6c2" }
