[workspace]
members = ["crates/*"]
resolver = "2"
package.version = "1.0.0"

[workspace.lints]
clippy.unwrap_used = "deny"
clippy.get_first = "allow"

[profile.release]
lto = true
panic = "abort"

[workspace.dependencies]
step-ingestooor-sdk = { package = "step-ingestooor-sdk", git = "ssh://git@github.com/step-finance/step-common-rust.git", rev = "5caa38de335d5058dd0d9026b17bb0138f56916f" }
solana-transaction-status = "=2.2.16"
solana-client = "=2.2.16"
solana-sdk = "=2.2.2"

lapin = "2.0.3"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["env", "derive"] }
dotenvy = "0.15.7"
clickhouse = { version = "0.13.1", features = ["native-tls"] }
futures = "0.3.31"
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
petgraph = "0.7.1"
rust_decimal = { version = "1.37.1", features = ["maths"] }
chrono = "0.4.39"
bs58 = "0.5.1"
axum = "0.8.1"
itertools = "0.14.0"
primitive-types = "0.13.1"
reqwest = "0.12.22"

[patch.crates-io]
solana-cost-model = { git = 'https://github.com/step-finance/agave', rev = "91c46eaca12de1e76c93acd6728d31ab1441f56e" }
solana-merkle-tree = { git = 'https://github.com/step-finance/agave', rev = "91c46eaca12de1e76c93acd6728d31ab1441f56e" }
solana-ledger = { git = 'https://github.com/step-finance/agave', rev = "91c46eaca12de1e76c93acd6728d31ab1441f56e" }
solana-storage-bigtable = { git = 'https://github.com/step-finance/agave', rev = "91c46eaca12de1e76c93acd6728d31ab1441f56e" }
solana-storage-proto = { git = 'https://github.com/step-finance/agave', rev = "91c46eaca12de1e76c93acd6728d31ab1441f56e" }
solana-runtime = { git = 'https://github.com/step-finance/agave', rev = "91c46eaca12de1e76c93acd6728d31ab1441f56e" }
solana-accounts-db = { git = 'https://github.com/step-finance/agave', rev = "91c46eaca12de1e76c93acd6728d31ab1441f56e" }
solana-client = { git = 'https://github.com/step-finance/agave', rev = "91c46eaca12de1e76c93acd6728d31ab1441f56e" }
solana-transaction-status = { git = 'https://github.com/step-finance/agave', rev = "91c46eaca12de1e76c93acd6728d31ab1441f56e" }
solana-metrics = { git = 'https://github.com/step-finance/agave', rev = "91c46eaca12de1e76c93acd6728d31ab1441f56e" }
solana-account-decoder = { git = 'https://github.com/step-finance/agave', rev = "91c46eaca12de1e76c93acd6728d31ab1441f56e" }
agave-geyser-plugin-interface = { git = "https://github.com/step-finance/agave", rev = "91c46eaca12de1e76c93acd6728d31ab1441f56e" }
